--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -7,6 +7,7 @@
         </div>
         <div class="col-sm">
         Olá {{ usuario.funcionario.nome }}
+            <a href="{% url 'list_funcionarios' %}">Gerenciar Funcionários</a>
         </div>
         <div class="col-sm">
             <a href="{% url 'logout' %}">logout</a>
