--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -8,6 +8,7 @@
         <div class="col-sm">
         Olá {{ usuario.funcionario.nome }}
             <a href="{% url 'list_funcionarios' %}">Gerenciar Funcionários</a>
+            <a href="{% url 'list_departamentos' %}">Gerenciar Departamentos</a>
         </div>
         <div class="col-sm">
             <a href="{% url 'logout' %}">logout</a>
