--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -14,10 +14,15 @@
        <button type="submit" >Salvar</button>
    </form>
 </br>
-   <a href="{% url 'create_document' object.id %}" class="btn btn-success">Adcicionar Documento</a>
+
+{% if object %}
+  
+   <a href="{% url 'create_documento' object.id %}" class="btn btn-success">Adcicionar Documento</a>
+
+{% endif %}   
 <br>
     {% for documento  in object.documento_set.all %}
-      <a href="{{ documento.arquivo.url }}">  {{ documento }} </a><br>
+      <a href="{{ documento.arquivo.url }}">  {{ documento.descricao }} </a><br>
     {% endfor %}
 
 {% endblock main %}
